--- a/intrebare2.html
+++ b/intrebare2.html
@@ -1,365 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Ce spun EESTECerii?</title>
-<style>
-
-body {
-	background-image: url("background1.jpg");
-	background-repeat: no-repeat;
-    background-attachment: fixed;
-	background-position: center; 
-	background-color: #000000;
-}
-
-.intrebare {
-  text-align: center;
-  font-size: 40px;
-  width: 500px;
-  padding: 20px;
-  margin: 25px;
-  border:0px solid #939494;
-  margin-left: auto;
-  margin-right: auto ;
-  background-color: #FFFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 10px 30px 0 rgba(255, 255, 255, 255);
-
-}
-
-.button {
-  background-color: #FFFFFF; 
-  border: none;
-  color: white;
-  padding: 35px 35px;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  text-align: center;
-  margin: 6px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-
-}
-
-.button4 {
-  position: fixed;
-  bottom: 400px;
-  right: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-  
-}
-
-.button4:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-
-}
-
-.button5 {
-  position: fixed;
-  bottom: 300px;
-  right: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-}
-
-.button5:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-}
-
-.button6 {
-  position: fixed;
-  bottom: 200px;
-  right: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-}
-
-.button6:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-}
-
-.button1 {
-  position: fixed;
-  bottom: 400px;
-  left: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-}
-
-.button1:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-}
-
-
-.button2 {
-  position: fixed;
-  bottom: 300px;
-  left: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-}
-
-.button2:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-}
-
-.button3 {
-  position: fixed;
-  bottom: 200px;
-  left: 100px;
-  width: 300px;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-}
-
-.button3:hover {
-  border:0px solid #939494;
-  background-color: #FAFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-}
-
-.raspuns{
-  position: fixed;
-  border: none;
-  width: 232px;
-  height:5px;
-  background-color: #FFFFFF;
-  box-shadow: 0 8px 16px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 255);
-  padding: 35px 35px;
-  font-size: 20px;
-  text-align: center;
-  visibility: hidden;
-  background-color: #FFFFFF; background-image: -webkit-gradient(linear, left top, left bottom, from(#FAFFFF), to(#e6e6e6));
-  background-image: -webkit-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -moz-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -ms-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: -o-linear-gradient(top, #FAFFFF, #e6e6e6);
-  background-image: linear-gradient(to bottom, #FAFFFF, #e6e6e6);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FAFFFF, endColorstr=#e6e6e6);
-
-}
-
-.next{
-  position: fixed;
-  bottom: 10px;
-  right: 100px;
-  color:white;
-  border:0px solid #b30808;
-  background-color: #e40a0a; background-image: -webkit-gradient(linear, left top, left bottom, from(#e40a0a), to(#9f0202));
-  background-image: -webkit-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -moz-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
-  background-image: linear-gradient(to bottom, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
-  box-shadow: 0 6px 13px 0 rgba(255, 0, 0, 0.2), 0 4px 16px 0 rgba(255, 255, 255, 255);
-}
-
-#r1{
-  position: fixed;
-  bottom: 400px;
-  left: 100px;
-}
-
-#r2{
-  position: fixed;
-  bottom: 300px;
-  left: 100px;
-}
-
-#r3{
-  position: fixed;
-  bottom: 200px;
-  left: 100px;
-}
-
-#r4{
-  position: fixed;
-  bottom: 400px;
-  right: 100px;
-}
-
-#r5{
-  position: fixed;
-  bottom: 300px;
-  right: 100px;
-}
-
-#r6{
-  position: fixed;
-  bottom: 200px;
-  right: 100px;
-}
-
-.hide{
-  visibility: hidden;
-}
-
-a:link {
-  color: white; 
-  background-color: transparent; 
-  text-decoration: none;
-}
-
-a:visited {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:active {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-</style>
-</head>
-<body>
-<div class="intrebare">
-	Intrebare2?
-</div>
-<button class="button button1" id='bt1' ></button>
-<button class="button button2" id='bt2' ></button>
-<button class="button button3" id='bt3' ></button>
-<button class="button button4" id='bt4' ></button>
-<button class="button button5" id='bt5' ></button>
-<button class="button button6" id='bt6' ></button>
-<div class="raspuns hide" id="r1" >Raspuns1 50p</div>
-<div class="raspuns hide" id="r2">Raspuns2 20p</div>
-<div class="raspuns hide" id="r3">Raspuns3 10p</div>
-<div class="raspuns hide" id="r4">Raspuns4 9p</div>
-<div class="raspuns hide" id="r5">Raspuns5 7p</div>
-<div class="raspuns hide" id="r6">Raspuns6 4p</div>
-
-<button class = "next"><a href="intrebare3.html">Next</a></button>
-
-<script>
-  var wrong = new Audio('wrong.mp3');
-  var correct = new Audio('correct.mp3');
-
-  window.addEventListener("keydown", event => {
-    if (event.key == "1") {
-      document.getElementById('bt1').style.visibility = 'hidden';
-	  document.getElementById('r1').style.visibility = 'visible';
-	  correct.play();
-    }
-	if (event.key == "2") {
-	  document.getElementById('bt2').style.visibility = 'hidden';
-	  document.getElementById('r2').style.visibility = 'visible';
-	  correct.play();
-	}
-	if (event.key == "3") {
-	  document.getElementById('bt3').style.visibility = 'hidden';
-	  document.getElementById('r3').style.visibility = 'visible';
-	  correct.play();
-	}
-	if (event.key == "4") {
-	  document.getElementById('bt4').style.visibility = 'hidden';
-	  document.getElementById('r4').style.visibility = 'visible';
-	  correct.play();
-	}
-	if (event.key == "5") {
-	  document.getElementById('bt5').style.visibility = 'hidden';
-	  document.getElementById('r5').style.visibility = 'visible';
-	  correct.play();
-	}
-	if (event.key == "6") {
-	  document.getElementById('bt6').style.visibility = 'hidden';
-	  document.getElementById('r6').style.visibility = 'visible';
-	  correct.play();
-	}
-	if (event.key == "w") {
-	  wrong.play();
-	}	
-  });
-</script>
-
-</body>
+  <head>
+    <title>Ce spun EESTECerii?</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="CSE.js"></script>
+  </head>
+  <body>
+    <div class="intrebare"> Intrebare2? </div>
+    <button class="button button1" id='bt1' ></button>
+    <button class="button button2" id='bt2' ></button>
+    <button class="button button3" id='bt3' ></button>
+    <button class="button button4" id='bt4' ></button>
+    <button class="button button5" id='bt5' ></button>
+    <button class="button button6" id='bt6' ></button>
+    <div class="raspuns" id="r1" >Raspuns1 50p</div>
+    <div class="raspuns" id="r2">Raspuns2 20p</div>
+    <div class="raspuns" id="r3">Raspuns3 10p</div>
+    <div class="raspuns" id="r4">Raspuns4 9p</div>
+    <div class="raspuns" id="r5">Raspuns5 7p</div>
+    <div class="raspuns" id="r6">Raspuns6 4p</div>
+    <button class = "next"><a href="intrebare3.html">Next</a></button>
+  </body>
 </html>
